--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1blPveZgsGcxhmMlCX22rHWPnSamH3QN5",
+      "authorship_tag": "ABX9TyMmHD8DZe2F8u8yEaiUpdUA",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joy2nair/Heart-Disease-Prediction-MachineLearning-Project-/blob/main/Heart_Disease_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 62,
@@ -4844,42 +4857,6 @@
         "id": "SXWAZpWmrs0q"
       },
       "execution_count": 120,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nWezkbr2tbIq"
-      },
-      "execution_count": 120,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Qgi8iV_Gu44w"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "lyAOmWP8u4z7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "O1jB7-Smu4uB"
-      },
-      "execution_count": 133,
       "outputs": []
     },
     {
